--- a/twitter_alamofire_demo/Base.lproj/Main.storyboard
+++ b/twitter_alamofire_demo/Base.lproj/Main.storyboard
@@ -82,14 +82,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="127.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I love tweeting!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="epC-Fs-Q5Z">
-                                                    <rect key="frame" x="67" y="31" width="115" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I love tweeting!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="epC-Fs-Q5Z" customClass="TTTAttributedLabel">
+                                                    <rect key="frame" x="67" y="30.5" width="116" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iG1-Vd-HCw">
-                                                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                                    <rect key="frame" x="8" y="7.5" width="50" height="50"/>
                                                     <color key="backgroundColor" red="0.84251425700000004" green="0.86312628329999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
@@ -98,19 +98,19 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bK-aJ-q3M">
-                                                    <rect key="frame" x="66" y="8" width="45" height="19.5"/>
+                                                    <rect key="frame" x="66" y="7.5" width="45" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Yk-A4-gd8">
-                                                    <rect key="frame" x="119" y="9.5" width="76.5" height="17"/>
+                                                    <rect key="frame" x="119" y="9" width="76.5" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMs-gY-DAA">
-                                                    <rect key="frame" x="335" y="10.5" width="30" height="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMs-gY-DAA">
+                                                    <rect key="frame" x="335" y="9" width="30" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -217,6 +217,7 @@
                                                 <constraint firstItem="MVK-S1-bY9" firstAttribute="leading" secondItem="zd2-Er-659" secondAttribute="leadingMargin" constant="59" id="KzB-4Y-mad"/>
                                                 <constraint firstItem="2Yk-A4-gd8" firstAttribute="centerY" secondItem="8bK-aJ-q3M" secondAttribute="centerY" id="Vrz-Yh-JFT"/>
                                                 <constraint firstItem="8bK-aJ-q3M" firstAttribute="leading" secondItem="iG1-Vd-HCw" secondAttribute="trailing" constant="8" id="bHi-2J-bsg"/>
+                                                <constraint firstItem="EMs-gY-DAA" firstAttribute="centerY" secondItem="2Yk-A4-gd8" secondAttribute="centerY" id="cFd-bh-ApF"/>
                                                 <constraint firstItem="iG1-Vd-HCw" firstAttribute="leading" secondItem="zd2-Er-659" secondAttribute="leadingMargin" id="dYP-kS-CqF"/>
                                                 <constraint firstItem="epC-Fs-Q5Z" firstAttribute="leading" secondItem="iG1-Vd-HCw" secondAttribute="trailing" constant="9" id="djh-n3-uab"/>
                                                 <constraint firstItem="EMs-gY-DAA" firstAttribute="leading" secondItem="2Yk-A4-gd8" secondAttribute="trailing" constant="139.5" id="gNc-6O-KQc"/>
@@ -231,7 +232,6 @@
                                             <outlet property="nameLabel" destination="8bK-aJ-q3M" id="HPQ-FM-ZiA"/>
                                             <outlet property="profilePicImageView" destination="iG1-Vd-HCw" id="g0x-3f-KUf"/>
                                             <outlet property="replyCountLabel" destination="3T0-n8-zAd" id="aDw-v4-J6F"/>
-                                            <outlet property="replybutton" destination="oTy-bk-LUc" id="Mhs-gW-Zhj"/>
                                             <outlet property="retweetButton" destination="kBR-U7-Ilg" id="CUR-tj-qbM"/>
                                             <outlet property="retweetCountLabel" destination="RsU-VI-syA" id="RF5-jh-Qp9"/>
                                             <outlet property="tweetTextLabel" destination="epC-Fs-Q5Z" id="VUR-CB-P7Z"/>
@@ -405,7 +405,6 @@
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WBQ-7k-w61">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="131"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Eck-9X-4x3">
                                 <rect key="frame" x="16" y="101" width="70" height="70"/>
@@ -609,14 +608,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aQc-DR-g3m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2597.5999999999999" y="761.46926536731644"/>
+            <point key="canvasLocation" x="2246" y="1146"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="8Cn-Rc-QoU">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="lHu-gv-dAn" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarController" automaticallyAdjustsScrollViewInsets="NO" id="lHu-gv-dAn" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="7xM-lt-mTp">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
